--- a/FileManager/View/MainWindow.xaml
+++ b/FileManager/View/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FileManager.View"
-        xmlns:viewmodel="clr-namespace:FileManager.ViewModel"
+        xmlns:viewmodel="clr-namespace:FileManager.ViewModel" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
         WindowStyle="None"
         Title="MainWindow" Height="450" Width="800">
@@ -12,7 +12,7 @@
         <viewmodel:ManagerViewModel/>
     </Window.DataContext>
     <Grid >
-        
+
         <Grid.RowDefinitions>
             <RowDefinition Height="14*"/>
             <RowDefinition Height="211*"/>
@@ -21,12 +21,79 @@
             <ColumnDefinition Width="401*"/>
             <ColumnDefinition Width="399*"/>
         </Grid.ColumnDefinitions>
-        
-        <Grid Grid.Column="0" Grid.RowSpan="2">
 
-        </Grid>
-        <Grid Grid.Column="1" Grid.RowSpan="2">
+        <ListView Grid.Column ="0" Grid.Row="1" ItemsSource="{Binding ElementsOfDirectory}" SelectedItem="{Binding SelectedItem}">
+            <i:Interaction.Triggers>
 
-        </Grid>
+                <i:EventTrigger EventName="MouseDoubleClick">
+                    <i:InvokeCommandAction 
+                        Command="{Binding OpenFolder}"
+                        />
+
+                </i:EventTrigger>
+
+            </i:Interaction.Triggers>
+            <ListView.View>
+
+                <GridView >
+
+                    <GridViewColumn>
+
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Image Source="{Binding Path = Icon}" Height="24" Width="24" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path = Name}"></GridViewColumn>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path = Size }"></GridViewColumn>
+                </GridView>
+
+            </ListView.View>
+
+        </ListView>
+        <Label
+            Grid.Column="1"
+            Grid.Row="1"
+            Content="Information"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top" Height="34" Width="254" Margin="0,18,0,0">
+            <Label.Style>
+                <Style TargetType="Label">
+                    <Setter Property="Foreground" Value="Black"/>
+                    <Setter Property="FontFamily" Value="Montserrat"/>
+                    <Setter Property="FontSize" Value="20"/>
+                    <Setter Property="FontWeight" Value="Bold"/>
+                </Style>
+            </Label.Style>
+        </Label>
+        <Border
+            Grid.Column="1"
+            Grid.Row="1"
+            Margin="10"
+            BorderBrush="#1B4079"
+            BorderThickness="1"
+            CornerRadius="10">
+
+            <TextBlock 
+                    Text="{Binding InformationItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    Foreground="Black"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center" Height="294" Width="360">
+                <TextBlock.Style>
+                    <Style TargetType="TextBlock">
+                        <Setter Property="Foreground" Value="Black"/>
+                        <Setter Property="FontFamily" Value="Montserrat"/>
+                        <Setter Property="FontSize" Value="18"/>
+                        <Setter Property="FontWeight" Value="Light"/>
+                    </Style>
+                </TextBlock.Style>
+            </TextBlock>
+        </Border>
+        <Button Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" Margin="1" Height="24" Width="24" Command="{Binding BackCommand}">
+            <Button.Content >
+                <Image Source="/Images/Back.png"></Image>
+            </Button.Content>
+        </Button>
     </Grid>
 </Window>
