--- a/FileManager/View/MainWindow.xaml
+++ b/FileManager/View/MainWindow.xaml
@@ -11,17 +11,53 @@
     <Window.DataContext>
         <viewmodel:ManagerViewModel/>
     </Window.DataContext>
+
     <Grid >
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="14*"/>
-            <RowDefinition Height="211*"/>
+            <RowDefinition Height="49*"/>
+            <RowDefinition Height="401*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="401*"/>
-            <ColumnDefinition Width="399*"/>
+            <ColumnDefinition Width="99*"/>
+            <ColumnDefinition Width="101*"/>
         </Grid.ColumnDefinitions>
+        <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal"
+                    VerticalAlignment="Center">
 
+            <Button  HorizontalAlignment="Left" Margin="10,0,0,0" Height="24" Width="24"  Command="{Binding BackCommand}">
+                <Button.Content >
+                    <Image Source="/Images/Back.png"></Image>
+                </Button.Content>
+            </Button>
+            <TextBlock Width="100" Height="24" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="50,0,0,0">
+                <Border CornerRadius="10" Background="Bisque" BorderBrush="CadetBlue" BorderThickness="1" Margin="5 0 0 0">
+                   <Grid>
+                       <TextBox VerticalContentAlignment="Center" Height="24" TextWrapping="Wrap" Background="Transparent" x:Name="SearchBox" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                                BorderThickness="0" Foreground="Black" Margin="0,0,0,0" Text="{Binding SearchItem, UpdateSourceTrigger=PropertyChanged}"/>
+                       <TextBlock IsHitTestVisible="False"
+                                       Text="Search"
+                                       VerticalAlignment="Center"
+                                       HorizontalAlignment="Left"
+                                       Margin="5 0 0 0"
+                                       Foreground="Gray">
+
+                            <TextBlock.Style>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding Text, ElementName=SearchBox}" Value="">
+                                            <Setter Property="Visibility" Value="Visible"/>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </TextBlock.Style>
+
+                            </TextBlock>
+                   </Grid>
+                </Border>
+            </TextBlock>
+        </StackPanel>
         <ListView Grid.Column ="0" Grid.Row="1" ItemsSource="{Binding ElementsOfDirectory}" SelectedItem="{Binding SelectedItem}">
             <i:Interaction.Triggers>
 
@@ -70,7 +106,7 @@
         <Border
             Grid.Column="1"
             Grid.Row="1"
-            Margin="10"
+            Margin="10,10,10,10"
             BorderBrush="#1B4079"
             BorderThickness="1"
             CornerRadius="10">
@@ -90,10 +126,7 @@
                 </TextBlock.Style>
             </TextBlock>
         </Border>
-        <Button Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" Margin="1" Height="24" Width="24" Command="{Binding BackCommand}">
-            <Button.Content >
-                <Image Source="/Images/Back.png"></Image>
-            </Button.Content>
-        </Button>
+
+
     </Grid>
 </Window>
